--- a/Games/Readme
+++ b/Games/Readme
@@ -1,3 +1,3 @@
-Games I created at my spare time.
+Games I created using different programming languages at my spare time.
 
 Checkout my HTML and JavaScript games at my 'Html and JavaScript' Folder !
